2005-06-27  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/about.rb, remap_headings.rb: removed.
	* misc/plugin/quote_page.rb: merge remap_headings.rb.

	* misc/plugin/template.rb: support configuration via browsers.

2005-06-25  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: check the remote repository condition
	only if @repos_root exists (reported by NAGASAKI).

2005-06-25  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/text/default.en/*: add English data.
	* data/text/EnglishTextFormattingRules: moved to `misc/text/default.en/TextFormattingRules'.
	* misc/text/default: removed because this is same to `data/text'.

	* doc/INSTALL.en: add English data information to the document.

	* misc/text/default.en/TextFormattingRules: reviced.

	* misc/i18n/hikiconf.rb.sample.en: add a new file.

2005-06-24  Kouhei Yanagita <sugi@dream.big.or.jp>
	* plugin/00default.rb, plugin/en/00default.rb,
	plugin/fr/00default.rb, plugin/it/00default.rb, plugin/ja/00default.rb:
	show a result message when admin password is tried to be changed.
	* doc/INSTALL.en: add an English document for installation.

2005-06-24  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/config.rb (mobile_agent?): add a new method.
	* hiki/page.rb, plugin/00default.rb: support mobile agents.
	* style/default/html_formatter.rb (toc, apply_tdiary_theme):
	support mobile agents

	* hiki/repos/svn.rb: code cleanup.
	* misc/hikifarm/index.cgi: revise the condition whether the
	repository is local.

2005-06-23  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (generate_page): support 'toc' and 'toc_here'
	plugins.
	* plugin/00default.rb (toc_here): add a new plugin method.
	(toc): display table of content at the top of the text for
	backword compatibility.

2005-06-23  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/config.rb (load), hikiconf.rb.sample: most of the instance variables
	of Config class are now configurable in hikiconf.rb.

2005-06-23  Kazuhiko  <kazuhiko@fdiary.net>